<resources>
    <string name="empty"></string>
    <string name="app_name">TBank Author\'s Excursions</string>
    <string name="auth_email_label">Email</string>
    <string name="enter_email_error">Не введен email</string>
    <string name="email_error">Введите корректный email</string>
    <string name="login_error">Ошибка входа</string>
    <string name="password_label">Пароль</string>
    <string name="password_characters_error">Пароль должен содержать буквы, цифры и символы “!#$%&amp;*”</string>
    <string name="password_minimum_length_error">Пароль должен содержать не менее 8 символов</string>
    <string name="email_example_hint">example@mail.com</string>
    <string name="enter_password_error">Не введен пароль</string>
    <string name="enter_password_hint">Введите пароль</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="have_an_account">Есть аккаунт? Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="reg_thanks">Спасибо за регистрацию</string>
    <string name="reg_continue">Продолжить</string>
    <string name="confirm_button">Подтвердить</string>
    <string name="code_hint">Код</string>
    <string name="type_code_helper">Введите код отправленный вам на почту</string>
    <string name="main_page">Главная</string>
    <string name="settings">Настройки</string>
    <string name="profile_text">Профиль</string>
    <string name="filters_text">Фильтры</string>
    <string name="cities_text">Города</string>
    <string name="date_text">Дата</string>
    <string name="choose_date_text">Выбрать период</string>
    <string name="members_text">Участники</string>
    <string name="having_kids_text">Есть дети? (0-14)</string>
    <string name="apply_text">Применить фильтры</string>
    <string name="invalid_email_or_password_text">Неправильный email или пароль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lk_text">Личный кабинет</string>
    <string name="booked_excursions">Забронированные экскурсии</string>
    <string name="book_history">История бронирований</string>
    <string name="profile_settings">Настройки профиля</string>
    <string name="logout_text">Выйти из аккаунта</string>
    <string name="create_excursion">Создать экскурсию</string>
    <string name="book_calendar">Календарь бронирований</string>
    <string name="my_excursions">Опубликованные экскурсии</string>
    <string name="enter_excursion_name">Введите название экскурсии</string>
    <string name="excursion_name_text">Название экскурсии</string>
    <string name="dates_text">Даты</string>
    <string name="short_description_text">Краткое описание</string>
    <string name="full_description">Полное описание</string>
</resources>