<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:text="@string/lk_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/published_excursions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/my_excursions"
                android:padding="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"

                android:textSize="18sp" />

            <Button
                android:id="@+id/booking_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/book_calendar"

                android:padding="16dp"
                android:layout_marginHorizontal="20dp"

                android:textSize="18sp" />

            <Button
                android:id="@+id/create_excursion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/create_excursion"
                android:padding="16dp"
                android:layout_marginHorizontal="20dp"

                android:textSize="18sp" />

            <Button
                android:id="@+id/profile_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/profile_settings"
                android:padding="16dp"
                android:layout_marginHorizontal="20dp"

                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/logoutBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/logout_text"
        android:drawableLeft="@drawable/icon_logout"
        android:padding="16dp"
        android:layout_marginBottom="24dp"

        android:backgroundTint="@color/esc_red"
        android:backgroundTintMode="src_in"

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>