<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/filters_text"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cities_text"
        android:layout_marginStart="8dp"
        android:layout_marginVertical="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_cities"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="0.5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_text"
            android:layout_marginHorizontal="8dp"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/button_choose_date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"

            android:drawableEnd="@drawable/icon_arrow_drop_down"
            android:text="@string/choose_date_text">

        </Button>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/members_text"
            android:layout_marginHorizontal="8dp"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <Button
                android:layout_width="40dp"
                android:textAlignment="textStart"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textStyle="bold"
                android:text="-"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="8dp"/>

            <Button
                android:layout_width="40dp"
                android:textAlignment="textStart"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textStyle="bold"
                android:text="+"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/having_kids_text"
            android:layout_marginHorizontal="8dp"
            android:layout_centerVertical="true"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            style="@style/MyCheckBox"/>
    </RelativeLayout>


    <Button
        android:id="@+id/button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/apply_text" />


</LinearLayout>