<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="48dp"
    android:paddingHorizontal="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="80dp"

                android:hint="@string/excursion_name_text"
                app:errorIconDrawable="@null"

                app:placeholderText="@string/enter_excursion_name"
                app:expandedHintEnabled="false"

                android:textColorHint="@color/black"
                app:placeholderTextColor="@color/gray"
                app:boxStrokeColor="@color/black"
                app:helperTextTextColor="@color/error_red"
                app:hintTextColor="@color/icons_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/excursionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dates_text"
                    android:layout_centerVertical="true"/>

                <Button
                    android:id="@+id/button_choose_date_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"

                    android:drawableEnd="@drawable/icon_arrow_drop_down"
                    android:text="@string/choose_date_text">

                </Button>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Количество людей (мин/макс)"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="1"
                    android:id="@+id/maxPersons"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_height="80dp"

                    android:textColorHint="@color/black"
                    app:placeholderTextColor="@color/gray"
                    app:boxStrokeColor="@color/black"
                    app:helperTextTextColor="@color/error_red"
                    app:hintTextColor="@color/icons_gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/maxEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="1"
                    android:id="@+id/minPersons"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"


                    android:textColorHint="@color/black"
                    app:placeholderTextColor="@color/gray"
                    app:boxStrokeColor="@color/black"
                    app:helperTextTextColor="@color/error_red"
                    app:hintTextColor="@color/icons_gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/minEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shortDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="155dp"

                android:hint="@string/short_description_text"
                app:errorIconDrawable="@null"

                app:expandedHintEnabled="false"

                android:textColorHint="@color/black"
                app:placeholderTextColor="@color/gray"
                app:boxStrokeColor="@color/black"
                app:helperTextTextColor="@color/error_red"
                app:hintTextColor="@color/icons_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shortDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_marginTop="16dp"

                android:hint="@string/full_description"
                app:errorIconDrawable="@null"

                app:expandedHintEnabled="false"

                android:textColorHint="@color/black"
                app:placeholderTextColor="@color/gray"
                app:boxStrokeColor="@color/black"
                app:helperTextTextColor="@color/error_red"
                app:hintTextColor="@color/icons_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Завершить создание"
                android:textSize="18sp">

            </Button>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>